src/pages/search/show-tickets.css
*{
    margin: 0;
    padding: 0;
}

.card-row {
    width: 80%;
    margin-bottom: 5%;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: auto;
}
.card-container {
    display: flex;
    align-items: center;
    justify-content: center;
}
.card-custom {
    width: 15rem;
    height: 90%;
    border-radius: 1rem;
    box-shadow: 0 10px 8px #999;
    display: flex;
    flex-direction: column;
    text-align: center;
    background: blanchedalmond;
    border: 1px solid #ccc;
    margin: 1rem;
}

.card-img {
    width: 100%;
    height: 60%;
    border-radius: 1rem 1rem 0 0;
}

.card-title,
.card-descr,
.card-details {
    margin: 0.4rem 5%;
}

.card-descr,
.card-details {
    font-size: 13px;
}

.card-btn {
    text-align: center;
    background-color: lightsalmon;
    width: 80%;
    border: none;
    border-radius: 5px;
    padding: 0.5rem 1rem;
    color: white;
    text-decoration: none;
    margin: 0.5rem 1.5rem;
    cursor: pointer;
}

.search-input-container {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    justify-content: flex-end;
    text-align: center;
}

.search-input {
    width: 100%;
    margin-bottom: 10px;
}

